# mop_templates

./: .clang-format  .gitignore  .gitmodules  README.md
Datatekniskt Projekt/: README.md  md407-ram.x
Datatekniskt Projekt/lib/cmsis/: arm_common_tables.h  arm_math.h  core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_cm7.h  core_cmFunc.h  core_cmInstr.h  (+3 more)
Datatekniskt Projekt/specific_unit/: makefile
Linux/: makefile  startup.h
MOP/: README.md  main.c
MOP - Basic/: .gdbinit  README.md  main.c  makefile
MOP - Basic/md407_win_com/: MOP - Basic.csproj  Program.cs
MOP - CRT/: main.c  makefile  startup_crt.c  startup_crt.h
MOP - Linux/: README.md
MOP - Windows/: makefile  startup.c
Windows/: README.md  main.c  startup.h
basic/: .gitignore  makefile
crt/: README.md  makefile  md407-ram.x  shell.nix
crt/inc/: startup.h
crt/src/: main.c  startup.c
linux_dependencies/lib/: libcc1.so.0.0.0
mac_dependencies/: hardware-com-darwin
md407_win_com/: Program.cs
md407_win_rs/: Cargo.toml  shell.nix
md407_win_rs/md407_binaries/: hello_world.s19
md407_win_rs/src/: error.rs  main.rs
vsc_gui/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  flake.nix  md407-code-0.0.1.vsix  package-lock.json  package.json  shell.nix  tsconfig.json
vsc_gui/native_dependencies/: hardware-com-linux
vsc_gui/src/: actions.ts  baud_rate_config.ts  build_task.ts  constants.ts  download_native.ts  extension.ts  file_list.ts  native_com.ts  port_config.ts  template_creation.ts  update-fix.ts
vsc_gui/vsce_nix/: node-packages.nix
(+168 files in other folders)
