[package]
name = "md407_win_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
strip = true
panic = "abort"

[dependencies]
serialport = "4.0.1"
clap = { version = "3.0.14", features = [ "derive" ] }
crossterm = "0.23.0"
anyhow = "1.0.53"
